# Henera_hackaton_kleparivska_spilka

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_setup.md  SDK_AND_EXAMPLES.md  config.yaml  project_setup.sh  pyproject.toml  requirements.txt  results.json  start.sh  start_cv.sh  start_debug.sh
docker/: entrypoint.sh  px4-constraints.txt
docs/: README.md  architecture.md  evaluation.md  examples.md  getting-started.md  hackathon-rules.md  overview.md  pygr_led_protocol.md  sdk-api.md  troubleshooting.md  two_led_cv_plan.md
drone_sdk/: __init__.py  bridges.py  camera.py  config.py  drone.py  exceptions.py  follower_controller.py  led.py  ros_node.py  swarm_speeds.py
drone_sdk/two_led_cv/: __init__.py  adapter.py  decoder.py  green_detector.py  protocol.py  tracker.py  types.py
examples/: demo.py  sequential_followers.py  swarm_velocities.py  swarm_waypoints.py  synchronized_chain_start.py
examples/drone_sdk/: __init__.py  bridges.py  camera.py  drone.py  exceptions.py  follower_controller.py  led.py  ros_node.py  swarm_startup.py
resources/plugins/led_controller/: CMakeLists.txt  LedController.cc  LedController.hh
resources/scripts/: cv_launch.py  cv_swarm_test.py  cv_vision_provider.py  debug_launch.py  (+11 more)
test/: README.md  helper_drones.py  logger_node.py  run_logged_test.sh
tests/: test_cv_frame_deduplication.py  test_cv_swarm_runtime_helpers.py  test_follower_controller.py  test_green_detector.py  test_swarm_startup.py  test_two_led_adapter.py  test_two_led_decoder.py  test_two_led_protocol.py  test_two_led_tracker.py
(+43 files in other folders)
